# sculpture-demo

./: .gitignore  CLAUDE.md  README.md  process_voice_ref.py  pyproject.toml
app/: __init__.py  config.py  language.py  main.py  persona.py  state.py  types.py
app/asr/: engine.py  vyasa_onnx.py
app/audio/: capture.py  input.py  output.py  save.py  vad.py
app/llm/: engine.py
app/orchestration/: controller.py
app/tools/: __init__.py  builtin.py  calendar.py  executor.py  registry.py  router.py  types.py
app/tts/: bootstrap.py  engine.py  pocket_tts.py  spark_somya.py  voice_ref.py
app/utils/: logging.py  session_log.py  text.py  timers.py
sparktts/: __init__.py
tests/: test_asr_engine.py  test_capture.py  test_config.py  test_controller.py  test_language.py  test_llm_engine.py  test_persona.py  test_save.py  test_text.py  test_tool_router.py  test_tools.py  test_tts.py  test_vad.py  test_voice_ref.py  test_vyasa_onnx.py
