[project]
name = "sculpture-demo"
version = "0.1.0"
description = "Local real-time voice interaction bot demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.26",
    "silero-vad-lite>=0.2",
    "faster-whisper>=1.1",
    "huggingface-hub>=0.31",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "omegaconf>=2.3",
    "onnxruntime>=1.20",
    "ollama>=0.1.0",
    "pocket-tts>=1.1.1",
    "safetensors>=0.5.2",
    "sentencepiece>=0.1.99",
    "soundfile>=0.12.1",
    "soxr>=0.5.0.post1",
    "torch>=2.6,<2.7",
    "torchaudio>=2.6,<2.7",
    "tqdm>=4.66.5",
    "transformers>=4.46.2",
]

[project.scripts]
voice-bot = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app", "sparktts"]
